<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"

        >

        <Button
            android:id="@+id/back"
            android:layout_width="18dp"
            android:layout_height="17dp"
            android:background="@drawable/back"
            android:outlineProvider="none"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:fontFamily="casual"
            android:text="@string/label_c"
            android:textColor="#FFF"
            android:textSize="25sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="211dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/photo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="36sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/track" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/country" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/email" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/slack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/slack" />


</LinearLayout>
